@@ -11,15 +11,16 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public class MacrodistritoServiceimpl implements IMacrodistritoService {
+public class MacrodistritoServiceImpl implements IMacrodistritoService {
 
     private final MacrodistritoRepository macrodistritoRepository;
     private final MacrodistritoValidator macrodistritoValidator;
 
     @Autowired
-    public MacrodistritoServiceimpl(
+    public MacrodistritoServiceImpl(
             MacrodistritoRepository macrodistritoRepository,
             MacrodistritoValidator macrodistritoValidator
     ) {
@@ -30,63 +31,102 @@ public class MacrodistritoServiceimpl implements IMacrodistritoService {
     @Override
     @Transactional(readOnly = true)
     public List<MacrodistritoDTO> obtenerTodosLosMacrodistritos() {
-        return macrodistritoRepository.findByEstadoTrue()
+        return macrodistritoRepository.findAll()
                 .stream()
                 .map(this::convertToDTO)
-                .toList();
+                .collect(Collectors.toList());
+                //aqui dice que funciona desde java 8 pero podria usar el tolist directamente
     }
+
+    // public List<MacrodistritoDTO> obtenerActivos() {
+    // return macrodistritoRepository.findByEstadoTrue().stream()
+    //     .map(this::convertToDTO)
+    //     .collect(Collectors.toList());
+    // }
 
     @Override
     @Transactional(readOnly = true)
     public MacrodistritoDTO obtenerMacrodistritoPorId(Long idMacrodistrito) {
-        Macrodistrito macrodistrito = macrodistritoRepository.findByIdMacrodistritoAndEstadoTrue(idMacrodistrito)
+        Macrodistrito macrodistrito = macrodistritoRepository.findById(idMacrodistrito)
                 .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + idMacrodistrito));
         return convertToDTO(macrodistrito);
     }
 
+//    es por si quiero solo los activos 
+// Macrodistrito m = macrodistritoRepository
+//     .findByIdMacrodistritoAndEstadoTrue(idMacrodistrito)
+//     .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + idMacrodistrito));
+// return toDto(m);
+
     @Override
     @Transactional
-    public MacrodistritoDTO crearMacrodistrito(MacrodistritoDTO dto) {
-        macrodistritoValidator.validarMacrodistrito(dto);
-        // opcional: reforzar unicidad
-        // if (macrodistritoRepository.existsByNombreIgnoreCase(dto.getNombre())) {
+    public MacrodistritoDTO crearMacrodistrito(MacrodistritoDTO macrodistritoDTO) {
+        macrodistritoValidator.validarMacrodistrito(macrodistritoDTO);
+
+        // if (macrodistritoRepository.existsByNombreIgnoreCase(macrodistritoDTO.getNombre())) {
         //     throw new MacrodistritoValidator.BusinessException("Ya existe un macrodistrito con ese nombre.");
         // }
 
-        Macrodistrito entidad = convertToEntity(dto);
-        entidad.setIdMacrodistrito(null);
-        entidad.setEstado(Boolean.TRUE);
+        Macrodistrito macrodistrito = convertToEntity(macrodistritoDTO);
+        macrodistrito.setIdMacrodistrito(null);//Esto fuerza a JPA a generar un nuevo ID cuando guardas la entidad.
+        macrodistrito.setEstado(Boolean.TRUE);
 
-        return convertToDTO(macrodistritoRepository.save(entidad));
+        Macrodistrito guardado = macrodistritoRepository.save(macrodistrito);
+        return convertToDTO(guardado);
     }
 
     @Override
     @Transactional
-    public MacrodistritoDTO actualizarMacrodistrito(Long id, MacrodistritoDTO dto) {
-        Macrodistrito existente = macrodistritoRepository.findByIdMacrodistritoAndEstadoTrue(id)
+    public MacrodistritoDTO actualizarMacrodistrito(Long id, MacrodistritoDTO macrodistritoDTO) {
+        Macrodistrito existente = macrodistritoRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + id));
 
-        macrodistritoValidator.validarMacrodistrito(dto);
-        // opcional: unicidad ignorando el mismo id
+        macrodistritoValidator.validarMacrodistrito(macrodistritoDTO);
+        // Si quiero que actualizar no repita el mismo nombre en otro id
         // macrodistritoRepository.findByNombreIgnoreCase(dto.getNombre())
         //         .filter(m -> !m.getIdMacrodistrito().equals(id))
         //         .ifPresent(m -> { throw new MacrodistritoValidator.BusinessException("Ya existe un macrodistrito con ese nombre."); });
 
-        existente.setNombre(dto.getNombre());
-        existente.setDescripcion(dto.getDescripcion());
-        existente.setEstado(dto.getEstado());
+        existente.setNombre(macrodistritoDTO.getNombre());
+        existente.setDescripcion(macrodistritoDTO.getDescripcion());
+        existente.setEstado(macrodistritoDTO.getEstado());
+        Macrodistrito actualizada = macrodistritoRepository.save(existente);
 
-        return convertToDTO(macrodistritoRepository.save(existente));
+        return convertToDTO(actualizada);
     }
 
     @Override
     @Transactional
     public MacrodistritoDTO eliminarMacrodistrito(Long id) {
-        Macrodistrito existente = macrodistritoRepository.findByIdMacrodistritoAndEstadoTrue(id)
+        Macrodistrito existente = macrodistritoRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + id));
+
         existente.setEstado(Boolean.FALSE);
-        return convertToDTO(macrodistritoRepository.save(existente));
+        Macrodistrito eliminada = macrodistritoRepository.save(existente);
+        return convertToDTO(eliminada);
     }
+
+    @Override
+    @Transactional
+    public Macrodistrito obtenerMacrodistritoConBloqueo(Long id) {
+        Macrodistrito macrodistrito = macrodistritoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + id));
+        try{
+            Thread.sleep(15000); // Simula retardo
+        }catch(InterruptedException e){
+            Thread.currentThread().interrupt();
+        }
+        return macrodistrito;
+    }
+
+    @Override
+    @Transactional
+    public void eliminarMacrodistritoFisicamente(Long id) {
+        Macrodistrito existente = macrodistritoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Macrodistrito no encontrado con ID: " + id)); 
+        macrodistritoRepository.delete(existente);
+    }
+
 
     // --------- mapping ----------
     private MacrodistritoDTO convertToDTO(Macrodistrito m) {
